<resources>
    <string name="app_name">Nugget MVP</string>
    <string name="hey_nugget_text">Say “Hey Nugget” to wake me up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_server_for_the_day">Your server for the day</string>

    <string name="try_show_me_the_drinks_menu">Try “Nugget, Show me the drinks menu”</string>

    <string name="try_add_martini_to_my_order"><font color="#FFFFFFFF">Try “Nugget, add</font> <font color="#EF8549">&#160;Martini</font><font color="#FFFFFFFF">
        &#160;to my order”
    </font></string>
    <string name="guest_michael_j_i_table_12">Guest: Michael J. I Table # 12</string>
    <string name="added_to_your_order">&#160;added to your order</string>
    <string name="your_order">Your Order</string>
    <string name="say_nugget_confirm_my_order">Say “Nugget, confirm my order”</string>
    <string name="try_add_coke_to_my_order">Try “Nugget, Add Coke to my order”</string>
    <string name="try_add_mojito_to_my_order"><font color="#FFFFFFFF">Try “Nugget, add</font> <font color="#EF8549">&#160;Mojito</font><font color="#FFFFFFFF">
        &#160;to my order”
    </font></string>
    <string name="try_add_chicken_to_my_order"><font color="#FFFFFFFF">Try “Nugget, add</font> <font color="#EF8549">&#160;Chicken</font><font color="#FFFFFFFF">
        &#160;to my order”
    </font></string>
    <string name="say_nugget_refill_my_drink"><font color="#FFFFFFFF">Say “Nugget,</font> <font color="#EF8549">&#160;refill</font><font color="#FFFFFFFF">
        &#160;my drink”
    </font></string>
    <string name="try_nugget_i_need_napkins"><font color="#FFFFFFFF">Try “Nugget, I need</font> <font color="#EF8549">&#160;napkins</font><font color="#FFFFFFFF">
        ”
    </font></string>
    <string name="i_need_napkins"><font color="#FFFFFFFF">Can I get some</font> <font color="#EF8549">&#160;napkins</font></string>
    <string name="try_loved_it"><font color="#FFFFFFFF"> Try “Nugget, </font> <font color="#EF8549">Loved it</font><font color="#FFFFFFFF">
        ”
    </font></string>
    <string name="confirmation_message">Order Confirmed!\n\n\nYour food is\nbeing prepared</string>
    <string name="rate_your_experience_with_nugget">Rate your experience\nwith Nugget</string>
    <string name="loved_it">Loved it</string>
    <string name="liked_it">Liked it</string>
    <string name="liked_it_ex">Liked it!</string>
    <string name="okay">Okay</string>
    <string name="meh">Meh</string>
    <string name="hated_it">Hated it</string>
    <string name="transcripitng">Transcripitng...</string>
    <string name="listening">Listening...</string>
    <string name="tap_to_pay">Tap to pay</string>
    <string name="processing">Processing</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="wohoo_nyour_food_is_on_its_way">Wohoo! \nYour food is on its way</string>
    <string name="checking_in_ndo_you_need_anything">Checking in\nDo you need anything?</string>
    <string name="let_me_know_if_you_need_anything">Let me know if you need anything</string>
    <string name="do_you_need_a_refill">Looks like you’re almost\n done with your drink\n\n\nNeed a refill?
</string>

    <string name="try_i_want_a_fudge_brownie">Try “Nugget, I want a Fudge Brownie” or\n“I’m ready to Pay”</string>
    <string name="is_there_anything_else_i_can_get_you">Is there anything else I\ncan get you?</string>
    <string name="is_there_anything_else">Is there anything else I can get you?</string>
    <string name="sure_your">Sure! Your</string>
    <string name="cart_item_format">%d %s</string>
    <string name="your_drink_will_be_served_at_the_table">Your drink will be served at the table</string>
    <string name="enjoy_your_food">Alright, enjoy your food!</string>
    <string name="try_i_want_a_cheese_cake">Try “Nugget, I want a Cheesecake” or\n“I’m ready to Pay”</string>
    <string name="tax">Tax $</string>
    <string name="hope_you_will_enjoy_our_desert">Hope you will enjoy our desert!</string>
    <string name="none_statement">hmm.. not sure I understand that.\nCan you say that again?</string>
    <string name="loved_it_ex">Loved It!</string>
    <string name="glad_you_enjoyed_this_experience">Glad you enjoyed this experience</string>
    <string name="happy_to_serve">Happy to serve!</string>
    <string name="oh_no_i_m_still_a_work_in_progress_i_ll_learn_to_serve_better_next_time">Oh no, I\'m still a work in progress. I\'ll learn to serve better next time</string>
    <string name="thanks_for_your_feedback_i_ll_do_better_next_time">Thanks for your feedback. I\'ll do better next time</string>
    <string name="what_would_you_like_to_order_say_the_item_name_with_quantity">What would you like to order?\nSay the item name with quantity</string>
    <string name="what_would_you_like_to_order">What would you like to order?</string>
    <string name="say_nugget_to_wake_me_up">Say Nugget to wake me up.</string>
    <string name="do_you_want_anything_else">Do you want anything else?</string>
    <string name="if_you_are_done_say_confirm_order">If you are done, Say confirm order</string>

</resources>