<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.FeedBackFragment">

        <include
            android:id="@+id/header_layout"
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rate_your_experience"
            style="@style/textPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/rate_your_experience_with_nugget"
            android:textColor="@color/white"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <ImageView
            android:id="@+id/iv_loved_it"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@null"
            android:src="@drawable/loved_it"
            app:layout_constraintEnd_toStartOf="@id/tv_loved_it"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/tv_rate_your_experience"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_your_experience" />

        <TextView
            android:id="@+id/tv_loved_it"
            style="@style/textPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/loved_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_loved_it"
            app:layout_constraintEnd_toEndOf="@id/tv_rate_your_experience"
            app:layout_constraintStart_toEndOf="@id/iv_loved_it"
            app:layout_constraintTop_toTopOf="@id/iv_loved_it" />

        <ImageView
            android:id="@+id/iv_liked_it"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@null"
            android:src="@drawable/liked_it"
            app:layout_constraintEnd_toEndOf="@+id/iv_loved_it"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_loved_it"
            app:layout_constraintTop_toBottomOf="@+id/iv_loved_it" />

        <TextView
            android:id="@+id/tv_liked_it"
            style="@style/textPoppinsRegular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/liked_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_liked_it"
            app:layout_constraintEnd_toEndOf="@+id/tv_loved_it"
            app:layout_constraintStart_toStartOf="@+id/tv_loved_it"
            app:layout_constraintTop_toTopOf="@id/iv_liked_it"
            app:layout_constraintVertical_bias="0.125" />

        <ImageView
            android:id="@+id/iv_okay"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@null"
            android:src="@drawable/okay"
            app:layout_constraintEnd_toEndOf="@+id/iv_loved_it"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_loved_it"
            app:layout_constraintTop_toBottomOf="@id/iv_liked_it" />

        <TextView
            android:id="@+id/tv_okay"
            style="@style/textPoppinsRegular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/okay"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_okay"
            app:layout_constraintEnd_toEndOf="@+id/tv_loved_it"
            app:layout_constraintStart_toStartOf="@+id/tv_loved_it"
            app:layout_constraintTop_toTopOf="@+id/iv_okay" />

        <ImageView
            android:id="@+id/iv_meh"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@null"
            android:src="@drawable/meh"
            app:layout_constraintEnd_toEndOf="@+id/iv_loved_it"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_loved_it"
            app:layout_constraintTop_toBottomOf="@+id/iv_okay" />

        <TextView
            android:id="@+id/tv_meh"
            style="@style/textPoppinsRegular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/meh"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_meh"
            app:layout_constraintEnd_toEndOf="@+id/tv_loved_it"
            app:layout_constraintStart_toStartOf="@+id/tv_loved_it"
            app:layout_constraintTop_toTopOf="@id/iv_meh" />

        <ImageView
            android:id="@+id/iv_hated_it"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@null"
            android:src="@drawable/meh"
            app:layout_constraintEnd_toEndOf="@+id/iv_loved_it"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/iv_loved_it"
            app:layout_constraintTop_toBottomOf="@+id/iv_meh" />

        <TextView
            android:id="@+id/tv_hated_it"
            style="@style/textPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/hated_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_hated_it"
            app:layout_constraintEnd_toEndOf="@+id/tv_loved_it"
            app:layout_constraintStart_toStartOf="@+id/tv_loved_it"
            app:layout_constraintTop_toTopOf="@id/iv_hated_it" />

        <TextView
            android:id="@+id/tv_bottom_prompt"
            style="@style/textPoppinsLight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/try_loved_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/iv_bottom_eyes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_bottom_eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:contentDescription="@null"
            android:src="@drawable/bottom_close_eyes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_bottom_prompt"
            app:layout_constraintStart_toStartOf="@+id/tv_bottom_prompt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>