<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.QuestionsFragment">

        <include
            android:id="@+id/header_layout"
            layout="@layout/header_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_first_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_layout">

                <TextView
                    android:id="@+id/textView"
                    style="@style/textPoppinsLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/is_there_anything_else_i_can_get_you"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/question_animation"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_bottom_prompt"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/question" />

                <TextView
                    android:id="@+id/tv_bottom_prompt"
                    style="@style/textPoppinsLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/try_nugget_i_need_napkins"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toTopOf="@+id/bottom_eye_anim"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/bottom_eye_anim"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_bottom_prompt"
                    app:layout_constraintStart_toStartOf="@+id/tv_bottom_prompt"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/eye_blinking" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_second_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_layout">

                <TextView
                    android:id="@+id/tv_question"
                    style="@style/textPoppinsLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/is_there_anything_else"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/serving_animation"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_bottom_text"
                    app:layout_constraintEnd_toEndOf="@+id/tv_question"
                    app:layout_constraintStart_toStartOf="@+id/tv_question"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/waier_bringing" />

                <TextView
                    android:id="@+id/tv_bottom_text"
                    style="@style/textPoppinsLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toTopOf="@+id/bottom_eye_anim_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/i_need_napkins" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/bottom_eye_anim_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_bottom_text"
                    app:layout_constraintStart_toStartOf="@+id/tv_bottom_text"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/eye_blinking" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ViewFlipper>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>